--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -143,7 +143,7 @@
             ]
         },       
         {
-            "name": "trice l -source COM9",
+            "name": "trice l -s COMn",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -151,7 +151,7 @@
             "env": {},
             "args": ["log",
                      "-source",
-                     "COM9",
+                     "COM3",
                      "-baud",
                      "115200",
                      "-idlist",
