--- a/test/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB/MDK-ARM/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB.uvprojx
+++ b/test/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB/MDK-ARM/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB.uvprojx
@@ -71,9 +71,9 @@
           </BeforeCompile>
           <BeforeMake>
             <RunUserProg1>0</RunUserProg1>
-            <RunUserProg2>0</RunUserProg2>
+            <RunUserProg2>1</RunUserProg2>
             <UserProg1Name></UserProg1Name>
-            <UserProg2Name></UserProg2Name>
+            <UserProg2Name>trice u -i ./../../til.json -src ./.. -v</UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
             <nStopB1X>0</nStopB1X>
