--- a/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.uvprojx
+++ b/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.uvprojx
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>USE_FULL_LL_DRIVER,HSE_VALUE=8000000,HSE_STARTUP_TIMEOUT=100,LSE_STARTUP_TIMEOUT=5000,LSE_VALUE=32768,HSI_VALUE=8000000,LSI_VALUE=40000,VDD_VALUE=3300,PREFETCH_ENABLE=1,INSTRUCTION_CACHE_ENABLE=0,DATA_CACHE_ENABLE=0,STM32F030x8</Define>
+              <Define>TRICE_PORT=UART,USE_FULL_LL_DRIVER,HSE_VALUE=8000000,HSE_STARTUP_TIMEOUT=100,LSE_STARTUP_TIMEOUT=5000,LSE_VALUE=32768,HSI_VALUE=8000000,LSI_VALUE=40000,VDD_VALUE=3300,PREFETCH_ENABLE=1,INSTRUCTION_CACHE_ENABLE=0,DATA_CACHE_ENABLE=0,STM32F030x8</Define>
               <Undefine></Undefine>
               <IncludePath>../Core/Inc;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Device/ST/STM32F0xx/Include;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Include;..\..\..\srcTrice.C</IncludePath>
             </VariousControls>
@@ -459,14 +459,14 @@
           <GroupName>Trice</GroupName>
           <Files>
             <File>
-              <FileName>bare.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\bare.c</FilePath>
-            </File>
-            <File>
               <FileName>triceCheck.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceCheck.c</FilePath>
+            </File>
+            <File>
+              <FileName>bareUart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\bareUart.c</FilePath>
             </File>
           </Files>
         </Group>
