--- a/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060960::V5.06 update 7 (build 960)::ARMCC</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -499,6 +499,11 @@
     <Layers>
       <Layer>
         <LayName>&lt;Project Info&gt;</LayName>
+        <LayDesc></LayDesc>
+        <LayUrl></LayUrl>
+        <LayKeys></LayKeys>
+        <LayCat></LayCat>
+        <LayLic></LayLic>
         <LayTarg>0</LayTarg>
         <LayPrjMark>1</LayPrjMark>
       </Layer>
