--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,7 @@
             ]
         },              
         {
-            "name": "-p STLINK",
+            "name": "-p JLINK",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -63,16 +63,14 @@
             "env": {},
             "args": ["log",
                      "-port",
-                     "STLINK",
-                     "-largs",
-                     "\"-Device STM32F070F6 -if SWD -speed 4000 -RTTChannel 0\"",
+                     "JLINK",
+                     "-args",
+                     "\"-Device STM32F030R8 -if SWD -speed 4000 -RTTChannel 0 -RTTSearchRanges 0x20000000_0x1000\"",
                      "-verbose",
                      "-encoding",
-                     "bare",
+                     "packl",
                      "-idlist",
                      "${workspaceFolder}/til.json",
-                     "-key",
-                     "none",
             ]
         },
         {
