--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -109,25 +109,7 @@
             ]
         },
         {
-            "name": "trice l -p COM5 -e pack2L",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/cmd/trice",
-            "env": {},
-            "args": ["log",
-                     "-port",
-                     "COM5",
-                     "-baud",
-                     "115200",
-                     "-e",
-                     "pack2L",
-                     "-idlist",
-                     "${workspaceFolder}/til.json"
-            ]
-        },       
-        {
-            "name": "trice l -p COM3",
+            "name": "trice l -p COM",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -136,14 +118,14 @@
             "args": ["log",
                      "-verbose",
                      "-encoding",
-                     "esc",
+                     "pack2L",
                      "-port",
-                     "COM3",
+                     "COM5",
                      "-baud",
                      "115200",
                      "-idlist",
                      "${workspaceFolder}/til.json",
-                     "-key",
+                     "-password",
                      "none"
             ]
         },       
@@ -161,7 +143,7 @@
                      "115200",
                      "-idlist",
                      "${workspaceFolder}/til.json",
-                     "-key",
+                     "-password",
                      "none"
             ]
         },
@@ -191,7 +173,8 @@
             "env": {},
             "args": ["help"
             ]
-        },       {
+        },
+        {
             "name": "zeroSourceTreeIds",
             "type": "go",
             "request": "launch",
@@ -215,11 +198,11 @@
                     "-dry-run",
                     "-v",
                     "-src",
-                    "C:/repos/trice/test",
+                    "C:/repos/trice/srcTrice.C",
                     "-IDMethod",
-                    "upward",
+                    "random",
                     "-idlist",
-                    "c:/repos/trice/til.json"
+                    "${workspaceFolder}/til.json"
             ]
         }
     ]
