--- a/test/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64.uvprojx
@@ -72,7 +72,7 @@
           <BeforeMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -v  -IDLo 58010 -IDUp 60000 -IDMethod upward -i ../../../til.json -src ./ -src ../Core -src ../../../srcTrice.C</UserProg1Name>
+            <UserProg1Name>trice u -v  -i ../../../til.json -src ./ -src ../Core -src ../../../srcTrice.C</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
